[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/fonts/arial/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/main_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=23]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="ButtonGroup" id=2]

[node name="MenuCam" type="Camera"]
transform = Transform( -0.910684, 0, -0.413104, 0, 1, 0, 0.413104, 0, -0.910684, 9.76282, 7.10718, 5.24927 )

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Main" type="VBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/Main"]
margin_right = 1024.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )

[node name="DefaultButtons" type="HBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -71.0
margin_right = 512.0
margin_bottom = 71.0
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="MainMenu/DefaultButtons"]
self_modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 412.0
margin_right = 612.0
margin_bottom = 142.0
rect_min_size = Vector2( 200, 0 )

[node name="MainButtons" type="VBoxContainer" parent="MainMenu/DefaultButtons/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1

[node name="Start" type="Button" parent="MainMenu/DefaultButtons/Panel/MainButtons"]
margin_top = 11.0
margin_right = 200.0
margin_bottom = 41.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Create New World"
flat = true

[node name="Settings" type="Button" parent="MainMenu/DefaultButtons/Panel/MainButtons"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 86.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
disabled = true
text = "Settings"
flat = true

[node name="Exit" type="Button" parent="MainMenu/DefaultButtons/Panel/MainButtons"]
margin_top = 101.0
margin_right = 200.0
margin_bottom = 131.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Exit"
flat = true

[node name="StartGame" type="HBoxContainer" parent="MainMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -121.5
margin_right = 512.0
margin_bottom = 121.5
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="MainMenu/StartGame"]
self_modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 362.0
margin_right = 662.0
margin_bottom = 243.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="StartButtons" type="VBoxContainer" parent="MainMenu/StartGame/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1

[node name="SeedSettings" type="HBoxContainer" parent="MainMenu/StartGame/Panel/StartButtons"]
margin_top = 22.0
margin_right = 300.0
margin_bottom = 46.0
custom_constants/separation = 20
alignment = 1

[node name="Seed" type="Label" parent="MainMenu/StartGame/Panel/StartButtons/SeedSettings"]
margin_left = 17.0
margin_right = 63.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 23 )
text = "Seed"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MainMenu/StartGame/Panel/StartButtons/SeedSettings"]
margin_left = 83.0
margin_right = 283.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "Input Custom Seed"

[node name="Seed" type="Label" parent="MainMenu/StartGame/Panel/StartButtons"]
margin_top = 61.0
margin_right = 300.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 23 )
text = "World Size"
align = 1
valign = 1

[node name="WorldSize" type="HBoxContainer" parent="MainMenu/StartGame/Panel/StartButtons"]
margin_top = 100.0
margin_right = 300.0
margin_bottom = 130.0
custom_constants/separation = 20
alignment = 1

[node name="2x2" type="Button" parent="MainMenu/StartGame/Panel/StartButtons/WorldSize"]
margin_left = 64.0
margin_right = 108.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 23 )
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "2x2"

[node name="3x3" type="Button" parent="MainMenu/StartGame/Panel/StartButtons/WorldSize"]
margin_left = 128.0
margin_right = 172.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 23 )
toggle_mode = true
group = SubResource( 2 )
text = "3x3"

[node name="4x4" type="Button" parent="MainMenu/StartGame/Panel/StartButtons/WorldSize"]
margin_left = 192.0
margin_right = 236.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 23 )
toggle_mode = true
group = SubResource( 2 )
text = "4x4"

[node name="CreateWorld" type="Button" parent="MainMenu/StartGame/Panel/StartButtons"]
margin_top = 145.0
margin_right = 300.0
margin_bottom = 175.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Create World"
flat = true

[node name="Back" type="Button" parent="MainMenu/StartGame/Panel/StartButtons"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 220.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Back"
flat = true

[node name="Settings" type="HBoxContainer" parent="MainMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -71.0
margin_right = 512.0
margin_bottom = 71.0
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="MainMenu/Settings"]
self_modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 412.0
margin_right = 612.0
margin_bottom = 142.0
rect_min_size = Vector2( 200, 0 )

[node name="MainButtons" type="VBoxContainer" parent="MainMenu/Settings/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1

[node name="Start" type="Button" parent="MainMenu/Settings/Panel/MainButtons"]
margin_top = 11.0
margin_right = 200.0
margin_bottom = 41.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Create New World"
flat = true

[node name="Settings" type="Button" parent="MainMenu/Settings/Panel/MainButtons"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 86.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Settings"
flat = true

[node name="Exit" type="Button" parent="MainMenu/Settings/Panel/MainButtons"]
margin_top = 101.0
margin_right = 200.0
margin_bottom = 131.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
text = "Exit"
flat = true

[node name="Loading" type="HBoxContainer" parent="MainMenu"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -376.0
margin_top = -79.0
margin_right = 376.0
margin_bottom = -46.0
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MainMenu/Loading"]
margin_right = 752.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Timer" type="Timer" parent="MainMenu/Loading"]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="MainMenu/DefaultButtons/Panel/MainButtons/Start" to="MainMenu" method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/DefaultButtons/Panel/MainButtons/Exit" to="MainMenu" method="_on_Exit_pressed"]
[connection signal="pressed" from="MainMenu/StartGame/Panel/StartButtons/CreateWorld" to="MainMenu" method="_on_CreateWorld_pressed"]
[connection signal="pressed" from="MainMenu/StartGame/Panel/StartButtons/Back" to="MainMenu" method="_on_Back_pressed"]
[connection signal="pressed" from="MainMenu/Settings/Panel/MainButtons/Start" to="MainMenu" method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/Settings/Panel/MainButtons/Exit" to="MainMenu" method="_on_Exit_pressed"]
[connection signal="timeout" from="MainMenu/Loading/Timer" to="MainMenu" method="_on_Timer_timeout"]
